extend the javac extension